configs: update x86_64 and arm64 WSL2 kernel configs
Signed-off-by: Maria Lisina <sekoohaka.sarisan@gmail.com>

--- a/arch/arm64/configs/wsl2_defconfig
+++ b/arch/arm64/configs/wsl2_defconfig
@@ -7,7 +7,6 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_TASKSTATS=y
@@ -42,6 +41,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
+# CONFIG_INITRAMFS_PRESERVE_MTIME is not set
 CONFIG_SGETMASK_SYSCALL=y
 # CONFIG_SYSFS_SYSCALL is not set
 CONFIG_EMBEDDED=y
@@ -68,7 +68,6 @@ CONFIG_ARCH_VEXPRESS=y
 # CONFIG_NVIDIA_CARMEL_CNP_ERRATUM is not set
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
-CONFIG_SCHED_CLUSTER=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 # CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 # CONFIG_RODATA_FULL_DEFAULT_ENABLED is not set
@@ -86,6 +85,7 @@ CONFIG_ACPI=y
 # CONFIG_ACPI_PROCESSOR is not set
 # CONFIG_ACPI_TABLE_UPGRADE is not set
 CONFIG_KPROBES=y
+CONFIG_JUMP_LABEL=y
 CONFIG_ARCH_MMAP_RND_BITS=28
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
@@ -99,8 +99,6 @@ CONFIG_PARTITION_ADVANCED=y
 # CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
 CONFIG_BINFMT_MISC=y
-CONFIG_ZSWAP=y
-CONFIG_Z3FOLD=y
 # CONFIG_SLAB_MERGE_DEFAULT is not set
 # CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_COMPAT_BRK is not set
@@ -112,8 +110,8 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 # CONFIG_ZONE_DMA is not set
 # CONFIG_ZONE_DMA32 is not set
 CONFIG_ZONE_DEVICE=y
+CONFIG_ANON_VMA_NAME=y
 CONFIG_USERFAULTFD=y
-CONFIG_LRU_GEN=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_PACKET_DIAG=y
@@ -290,20 +288,20 @@ CONFIG_PCI_HYPERV=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_DEVTMPFS_SAFE=y
+CONFIG_FW_UPLOAD=y
 # CONFIG_VEXPRESS_CONFIG is not set
 CONFIG_CONNECTOR=y
 CONFIG_FIRMWARE_MEMMAP=y
 # CONFIG_EFI_ARMSTUB_DTB_LOADER is not set
 CONFIG_RESET_ATTACK_MITIGATION=y
+CONFIG_EFI_COCO_SECRET=y
 # CONFIG_PNP_DEBUG_MESSAGES is not set
-CONFIG_ZRAM=y
-CONFIG_ZRAM_WRITEBACK=y
-CONFIG_ZRAM_MEMORY_TRACKING=y
-CONFIG_ZRAM_MULTI_COMP=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=65536
 CONFIG_VIRTIO_BLK=y
+CONFIG_VCPU_STALL_DETECTOR=y
 CONFIG_SCSI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
@@ -526,7 +524,6 @@ CONFIG_SQUASHFS_LZO=y
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_ZSTD=y
 CONFIG_EROFS_FS=y
-CONFIG_EROFS_FS_ZIP_LZMA=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V4=y
 CONFIG_NFS_V4_1=y
@@ -562,6 +559,7 @@ CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_LANDLOCK=y
 # CONFIG_INTEGRITY is not set
+CONFIG_ZERO_CALL_USED_REGS=y
 CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CTS=y
@@ -569,6 +567,7 @@ CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
+CONFIG_FIPS_SIGNATURE_SELFTEST=y
 # CONFIG_RAID6_PQ_BENCHMARK is not set
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
@@ -583,11 +582,13 @@ CONFIG_CONSOLE_LOGLEVEL_QUIET=1
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=1
 # CONFIG_SYMBOLIC_ERRNAME is not set
 # CONFIG_DEBUG_MISC is not set
-CONFIG_DEBUG_INFO_DWARF5=y
+CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
 CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y
+CONFIG_DEBUG_INFO_BTF=y
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_SLUB_DEBUG is not set
+CONFIG_PAGE_TABLE_CHECK=y
 CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_PANIC_ON_OOPS=y
@@ -604,5 +605,5 @@ CONFIG_SCHED_TRACER=y
 CONFIG_HWLAT_TRACER=y
 CONFIG_FTRACE_SYSCALLS=y
 CONFIG_TRACER_SNAPSHOT_PER_CPU_SWAP=y
-CONFIG_IO_STRICT_DEVMEM=y
+# CONFIG_STRICT_DEVMEM is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
