--- a/arch/x86/configs/wsl2_defconfig
+++ b/arch/x86/configs/wsl2_defconfig
@@ -7,6 +7,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
+# CONFIG_PREEMPT_DYNAMIC is not set
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -40,6 +41,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
+# CONFIG_INITRAMFS_PRESERVE_MTIME is not set
 CONFIG_EXPERT=y
 # CONFIG_UID16 is not set
 CONFIG_SMP=y
@@ -50,22 +52,24 @@ CONFIG_X86_X2APIC=y
 CONFIG_HYPERVISOR_GUEST=y
 CONFIG_PARAVIRT_SPINLOCKS=y
 # CONFIG_KVM_GUEST is not set
+CONFIG_INTEL_TDX_GUEST=y
 CONFIG_MCORE2=y
 CONFIG_PROCESSOR_SELECT=y
 # CONFIG_CPU_SUP_HYGON is not set
 # CONFIG_CPU_SUP_ZHAOXIN is not set
 CONFIG_NR_CPUS=256
 # CONFIG_SCHED_MC_PRIO is not set
-# CONFIG_X86_MCE is not set
 # CONFIG_PERF_EVENTS_INTEL_UNCORE is not set
 # CONFIG_PERF_EVENTS_INTEL_RAPL is not set
 # CONFIG_PERF_EVENTS_INTEL_CSTATE is not set
 # CONFIG_PERF_EVENTS_AMD_UNCORE is not set
+CONFIG_PERF_EVENTS_AMD_BRS=y
 # CONFIG_X86_IOPL_IOPERM is not set
 # CONFIG_MICROCODE is not set
 # CONFIG_X86_5LEVEL is not set
 CONFIG_X86_PMEM_LEGACY=y
 # CONFIG_MTRR_SANITIZER is not set
+# CONFIG_X86_KERNEL_IBT is not set
 CONFIG_EFI=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_MIXED=y
@@ -84,9 +88,9 @@ CONFIG_ACPI_NFIT=y
 # CONFIG_ACPI_PRMT is not set
 # CONFIG_X86_PM_TIMER is not set
 CONFIG_CPU_FREQ=y
+CONFIG_X86_AMD_PSTATE=y
 # CONFIG_PCI_MMCONFIG is not set
 CONFIG_IA32_EMULATION=y
-CONFIG_X86_X32_ABI=y
 CONFIG_KVM=y
 CONFIG_KVM_INTEL=y
 CONFIG_KVM_AMD=y
@@ -104,8 +108,6 @@ CONFIG_PARTITION_ADVANCED=y
 # CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
 CONFIG_BINFMT_MISC=y
-CONFIG_ZSWAP=y
-CONFIG_Z3FOLD=y
 # CONFIG_SLAB_MERGE_DEFAULT is not set
 # CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_COMPAT_BRK is not set
@@ -117,8 +119,8 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_DEFERRED_STRUCT_PAGE_INIT=y
 CONFIG_ZONE_DEVICE=y
+CONFIG_ANON_VMA_NAME=y
 CONFIG_USERFAULTFD=y
-CONFIG_LRU_GEN=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_PACKET_DIAG=y
@@ -296,14 +298,13 @@ CONFIG_PCI_HYPERV=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_DEVTMPFS_SAFE=y
+CONFIG_FW_UPLOAD=y
 CONFIG_CONNECTOR=y
 # CONFIG_DMIID is not set
 CONFIG_RESET_ATTACK_MITIGATION=y
+CONFIG_EFI_COCO_SECRET=y
 # CONFIG_PNP_DEBUG_MESSAGES is not set
-CONFIG_ZRAM=y
-CONFIG_ZRAM_WRITEBACK=y
-CONFIG_ZRAM_MEMORY_TRACKING=y
-CONFIG_ZRAM_MULTI_COMP=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=65536
@@ -466,7 +467,6 @@ CONFIG_VIRTIO_PCI=y
 # CONFIG_VIRTIO_PCI_LEGACY is not set
 CONFIG_VIRTIO_PMEM=y
 CONFIG_VIRTIO_BALLOON=y
-CONFIG_VIRTIO_MEM=y
 CONFIG_VIRTIO_INPUT=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_VDPA=y
@@ -531,7 +531,6 @@ CONFIG_SQUASHFS_LZO=y
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_ZSTD=y
 CONFIG_EROFS_FS=y
-CONFIG_EROFS_FS_ZIP_LZMA=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V4=y
 CONFIG_NFS_V4_1=y
@@ -567,6 +566,7 @@ CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_LANDLOCK=y
 # CONFIG_INTEGRITY is not set
+CONFIG_ZERO_CALL_USED_REGS=y
 CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CTS=y
@@ -574,6 +574,7 @@ CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
+CONFIG_FIPS_SIGNATURE_SELFTEST=y
 # CONFIG_RAID6_PQ_BENCHMARK is not set
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
@@ -586,11 +587,13 @@ CONFIG_CONSOLE_LOGLEVEL_DEFAULT=2
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=1
 # CONFIG_SYMBOLIC_ERRNAME is not set
 # CONFIG_DEBUG_MISC is not set
-CONFIG_DEBUG_INFO_DWARF5=y
+CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
 CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y
+CONFIG_DEBUG_INFO_BTF=y
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_SLUB_DEBUG is not set
+CONFIG_PAGE_TABLE_CHECK=y
 CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_PANIC_ON_OOPS=y
@@ -601,13 +604,14 @@ CONFIG_DEBUG_NOTIFIERS=y
 CONFIG_DEBUG_CREDENTIALS=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_TRACE is not set
+CONFIG_FPROBE=y
 CONFIG_FUNCTION_PROFILER=y
 CONFIG_STACK_TRACER=y
 CONFIG_SCHED_TRACER=y
 CONFIG_HWLAT_TRACER=y
 CONFIG_FTRACE_SYSCALLS=y
 CONFIG_TRACER_SNAPSHOT_PER_CPU_SWAP=y
-CONFIG_IO_STRICT_DEVMEM=y
+# CONFIG_STRICT_DEVMEM is not set
 # CONFIG_X86_VERBOSE_BOOTUP is not set
 # CONFIG_X86_DEBUG_FPU is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
