--- a/arch/arm64/configs/wsl2_defconfig
+++ b/arch/arm64/configs/wsl2_defconfig
@@ -296,6 +296,9 @@ CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_RESET_ATTACK_MITIGATION=y
 CONFIG_EFI_COCO_SECRET=y
 # CONFIG_PNP_DEBUG_MESSAGES is not set
+CONFIG_ZRAM=m
+CONFIG_ZRAM_WRITEBACK=y
+CONFIG_ZRAM_MULTI_COMP=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_RAM=y
@@ -571,6 +574,7 @@ CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_MD4=y
+CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_FIPS_SIGNATURE_SELFTEST=y
